--- a/futuristic/package.json
+++ b/futuristic/package.json
@@ -13,6 +13,7 @@
     "framer-motion": "^7.5.0",
     "json-server": "^0.17.0",
     "react": "^18.2.0",
+    "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.4",
